--- a/outdoor_adventures_home.html
+++ b/outdoor_adventures_home.html
@@ -30,9 +30,9 @@
           </div>
         </div>
         <!-- gallery -->
-        <div class="icon-box"><a href="#news"><img class="icon" src="images/icons/gallery.png" alt="" width="20px" height="20px"></a>
+        <div class="icon-box"><a href="outdoor_adventures_gallery.html"><img class="icon" src="images/icons/gallery.png" alt="" width="20px" height="20px"></a>
           <div class="link">
-            <a href="#">Gallery</a>
+            <a href="outdoor_adventures_gallery.html">Gallery</a>
           </div>
         </div>
         <!-- contact us -->
