completed contact page

--- a/outdoor_adventures_gallery.html
+++ b/outdoor_adventures_gallery.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <!-- contact us -->
-        <div class="icon-box"><a href="#news"><img class="icon" src="images/icons/agenda.png" alt="" width="20px" height="20px"></a>
+        <div class="icon-box"><a href="outdoor_adventures_contact.html"><img class="icon" src="images/icons/agenda.png" alt="" width="20px" height="20px"></a>
           <div class="link">
-            <a href="#">Contact Us</a>
+            <a href="outdoor_adventures_contact.html">Contact Us</a>
           </div>
         </div>
       </div>
