--- a/outdoor_adventures_gallery.html
+++ b/outdoor_adventures_gallery.html
@@ -1,154 +1,159 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link rel="stylesheet" href="css/style2.css">
-    <meta charset="utf-8">
-    <title>Outdoor Adventures/Gallery</title>
-  </head>
-  <body>
-    <!-- navbar -->
-    <nav>
-      <div class="navbar">
-        <!-- dropdown categories -->
-        <div class="dropdown">
-          <button class="dropbtn"><img src="images/icons/squares.png" alt="" width="20px" height="20px">
+<head>
+  <link rel="stylesheet" href="css/style2.css">
+  <meta charset="utf-8">
+  <title>Outdoor Adventures/Gallery</title>
+</head>
+<body>
+  <!-- navbar -->
+  <nav>
+    <div class="navbar">
+      <!-- dropdown categories -->
+      <div class="dropdown">
+        <button class="dropbtn"><img src="images/icons/squares.png" alt="" width="20px" height="20px">
 
-          </button>
-          <div class="dropdown-content">
-            <a href="#camping">Camping</a>
-            <a href="#fishing">Fishing</a>
-            <a href="#hiking">Hiking</a>
-            <a href="#rock-climbing">Rock Climbing</a>
-          </div>
+        </button>
+        <div class="dropdown-content">
+          <a href="#camping">Camping</a>
+          <a href="#fishing">Fishing</a>
+          <a href="#hiking">Hiking</a>
+          <a href="#rock-climbing">Rock Climbing</a>
         </div>
+      </div>
 
-        <!-- home -->
-        <div class="icon-box"><a href="outdoor_adventures_home.html"><img class="icon" src="images/icons/house.png" alt="" width="20px" height="20px"></a>
-          <div class="link">
-            <a href="outdoor_adventures_home.html">Home</a>
-          </div>
+      <!-- home -->
+      <div class="icon-box"><a href="outdoor_adventures_home.html"><img class="icon" src="images/icons/house.png" alt="" width="20px" height="20px"></a>
+        <div class="link">
+          <a href="outdoor_adventures_home.html">Home</a>
         </div>
-        <!-- gallery -->
-        <div class="icon-box"><a href="#gallery"><img class="icon" src="images/icons/gallery.png" alt="" width="20px" height="20px"></a>
-          <div class="link">
-            <a href="#">Gallery</a>
-          </div>
+      </div>
+      <!-- gallery -->
+      <div class="icon-box"><a href="#gallery"><img class="icon" src="images/icons/gallery.png" alt="" width="20px" height="20px"></a>
+        <div class="link">
+          <a href="#">Gallery</a>
         </div>
-        <!-- contact us -->
-        <div class="icon-box"><a href="outdoor_adventures_contact.html"><img class="icon" src="images/icons/agenda.png" alt="" width="20px" height="20px"></a>
-          <div class="link">
-            <a href="outdoor_adventures_contact.html">Contact Us</a>
+      </div>
+      <!-- contact us -->
+      <div class="icon-box"><a href="outdoor_adventures_contact.html"><img class="icon" src="images/icons/agenda.png" alt="" width="20px" height="20px"></a>
+        <div class="link">
+          <a href="outdoor_adventures_contact.html">Contact Us</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!------------------------------------------------------------------------------------->
+  <!-- Content -->
+  <section>
+    <!------------------------------->
+    <!-- Camping -->
+    <section id="camping">
+
+      <!-- slide show -->
+      <div id="slideshow" class="slideshow">
+        <div class="slide-wrapper">
+          <div id="hoveer" class="slide">
+            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
           </div>
         </div>
       </div>
-    </nav>
-    <section>
-
-      <section id="camping">
-
-          <!-- slide show -->
-        <div id="slideshow" class="slideshow">
-          <div class="slide-wrapper">
-            <div id="hoveer" class="slide">
-              <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
-            </div>
-
-            <div class="slide">
-              <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
-            </div>
-
-            <div class="slide">
-              <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
-            </div>
-
-            <div class="slide">
-              <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
-            </div>
-          </div>
+      <!-- image 1 -->
+      <div class="box1">
+        <div>
+          <img src="images/camp/camp1.jpeg" alt="" width="100%" height="100%">
         </div>
-
-        <div class="box1">
-          <div>
-            <img src="images/camp/camp1.jpeg" alt="" width="100%" height="100%">
-          </div>
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
-          </div>
+        <div class="overlay">
+          <div class="text">number 1</div>
         </div>
-        <div class="box2">
-          <div>
-            <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
-          </div>
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
-          </div>
-        </div>
-        <div class="box3">
-          <div>
-            <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
-          </div>
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
-          </div>
-        </div>
-        <div class="box4">
-          <div>
-            <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
-          </div>
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
-          </div>
-        </div>
-        <div class="box5">
-          <div>
-            <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
-          </div>
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
-          </div>
-        </div>
-      </section>
-
-      <section id="fishing">
-
-          <!-- slide show -->
-        <div id="slideshow" class="slideshow">
-          <div class="slide-wrapper">
-            <div id="hoveer" class="slide">
-              <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
-            </div>
-
-            <div class="slide">
-              <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
-            </div>
-
-            <div class="slide">
-              <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
-            </div>
-
-            <div class="slide">
-              <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
-            </div>
-          </div>
-        </div>
-
-        <div class="fish">
-
+      </div>
+      <!-- image 2 -->
+      <div class="box2">
+        <div>
           <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
-
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
-          </div>
         </div>
-        <div class="fish2">
-
+        <div class="overlay">
+          <div class="text">number 2</div>
+        </div>
+      </div>
+      <!-- image 3 -->
+      <div class="box3">
+        <div>
           <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        </div>
+        <div class="overlay">
+          <div class="text">number 3</div>
+        </div>
+      </div>
+      <!-- images 4 -->
+      <div class="box4">
+        <div>
+          <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        </div>
+        <div class="overlay">
+          <div class="text">number 4</div>
+        </div>
+      </div>
+      <!-- image 5 -->
+      <div class="box5">
+        <div>
+          <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        </div>
+        <div class="overlay">
+          <div class="text">number 5</div>
+        </div>
+      </div>
+    </section>
+    <!-------------------------------------------->
+    <!-- Fishing -->
+    <section id="fishing">
+      <!-- slide show -->
+      <div id="slideshow" class="slideshow">
+        <div class="slide-wrapper">
+          <div id="hoveer" class="slide">
+            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+          </div>
 
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
           </div>
         </div>
-        <!-- slide show -->
+      </div>
+
+      <!-- image 1 -->
+      <div class="part1">
+        <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        <div class="overlay">
+          <div class="text">number 1</div>
+        </div>
+      </div>
+      <!-- image 2 -->
+      <div class="part2">
+        <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        <div class="overlay">
+          <div class="text">number 2</div>
+        </div>
+      </div>
+      <!-- slide show -->
       <div id="slideshow" class="slideshow2">
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
@@ -168,72 +173,190 @@
           </div>
         </div>
       </div>
-        <div class="nonefish">
-
-          <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
-
-          <div class="overlay">
-            <div class="text">and that is good to hear</div>
-          </div>
+      <!-- image 3 -->
+      <div class="part3">
+        <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        <div class="overlay">
+          <div class="text">number 3</div>
         </div>
-      </section>
-      <section id="hiking">
-        <div class="hiking">
-
-        </div>
-        <div class="hiking2">
-
-        </div>
-        <div class="hike">
-
-        </div>
-        <div class="hike2">
-
-        </div>
-        <div class="hike3">
-
-        </div>
-      </section>
-      <section id="rock-climbing">
-        <div class="img1">
-
-        </div>
-        <div class="img2">
-
-        </div>
-        <div class="img3">
-
-        </div>
-        <div class="img4">
-
-        </div>
-        <div class="rock">
-
-        </div>
-        <div class="rock2">
-
-        </div>
-      </section>
+      </div>
 
     </section>
-    <footer>
-      <div id="about">
-        <h4>About</h4>
-        <ul>
-          <li><a href="https://www.outdoorproject.com/">| Home</a></li>
-          <li><a href="https://www.outdoorwarehouse.co.za/">| Gallery</a></li>
-          <li><a href="http://www.outdoornetwork.co.za/">| Contact Us</a></li>
-        </ul>
+      <!------------------------------------------------->
+      <!-- Hiking -->
+    <section id="hiking">
+      <!-- slide show -->
+      <div id="slideshow" class="slideshow">
+        <div class="slide-wrapper">
+          <div id="hoveer" class="slide">
+            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+          </div>
+        </div>
       </div>
-      <div id="related-sites">
-        <h4>Related Sites</h4>
-        <ul>
-          <li><a href="https://www.outdoorproject.com/">| Outdoor Project</a></li>
-          <li><a href="https://www.outdoorwarehouse.co.za/">| Outdoor Warehouse</a></li>
-          <li><a href="http://www.outdoornetwork.co.za/">| Outdoor Network</a></li>
-          <li><a href="https://www.capetownmagazine.com/hikes-overview">| Explore the Outdoors</a></li>
-        </ul>
+
+      <!-- slide show -->
+      <div id="slideshow" class="slideshow2">
+        <div class="slide-wrapper">
+          <div id="hoveer" class="slide">
+            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+          </div>
+        </div>
       </div>
-    </footer>
-  </body>
+      <!-- images 1 -->
+      <div class="hike">
+        <img src="images/locations/Mafadi.jpg" alt="" width="100%" height="100%">
+        <div class="overlay">
+          <div class="text">Mafadi is the highest point in South Africa and situated in the Drakensberg Mountain range, home to some of the finest adventure trekking around - if you are looking for a feeling of BIG, wide open space, The Drakensberg will give you that - just look at the Gallery (all photo's in the gallery were taken during guided hikes, and none are professionally 'posed').</div>
+        </div>
+      </div>
+      <!-- images 2 -->
+      <div class="hike2">
+        <img src="images/hiking/hiking5.jpg" alt="" width="100%" height="100%">
+
+        <div class="overlay">
+          <div class="text">
+            DEVIL’S PEAK
+            <br>
+            This path zig-zags up from Tafelberg Road (where the Cableway station is) and then takes a steep route up to the peak. There are fantastic views of Table Mountain and the city below once you reach the top.
+          </div>
+        </div>
+      </div>
+      <!-- images 3 -->
+      <div class="hike3">
+        <img src="images/locations/chapman.jpg" alt="" width="100%" height="100%">
+        <div class="overlay">
+          <div class="text">
+            CHAPMAN’S PEAK
+            <br>
+            Ericas, proteas and indigenous trees can all be found in the thick fynbos covering this peak. You’ll also have the added bonus of breathtaking views of Hout Bay, Fish Hoek and Gordon’s Bay.
+          </div>
+        </div>
+      </div>
+    </section>
+    <!----------------------------------->
+    <!-- rockclimbing -->
+    <section id="rock-climbing">
+      <!-- images 1 -->
+      <div class="img1">
+        <div>
+          <img src="images/locations/De_Pakhuys.jpg" alt="" width="100%" height="100%">
+        </div>
+        <div class="overlay">
+          <div class="text">De Pakhuys offers nature lovers and adventure seekers alike the opportunity to experience the Cederberg by bouldering in Rocklands. De Pakhuys chalets and campsite are located right in the middle of the world-famous Rocklands climbing area.</div>
+        </div>
+      </div>
+      <!-- images 2 -->
+      <div class="img2">
+        <div>
+          <img src="images/locations/cederberg.jpg" alt="" width="100%" height="100%">
+        </div>
+        <div class="overlay">
+          <div class="text">Explore the high peaks and hidden secrets of the rugged Cederberg mountain paradise with a qualified, registered mountain guide. We offer various trekking options, ranging from moderate day hikes to multi-day overnight trips. Both classic backpacking, with camping in the wild, and lodge-based slackpacking tours are available.</div>
+        </div>
+      </div>
+      <!-- images 3 -->
+      <div class="img3">
+        <div>
+          <img src="images/camp/camp1.jpeg" alt="" width="100%" height="100%">
+        </div>
+        <div class="overlay">
+          <div class="text">number 3</div>
+        </div>
+      </div>
+      <!-- images 4 -->
+      <div class="img4">
+        <div>
+          <img src="images/locations/tablemountain.jpg" alt="" width="100%" height="100%">
+        </div>
+        <div class="overlay">
+          <div class="text">
+             To Rock Climb on Table Mountain ranks very high (pun intended) on many climbers bucket list - whether you have just learned to climb, climb mostly indoors or if you are a seasoned pro. Nowhere else can you so easily acces rock climbing of the highest quality, directly above a metropolitan city with ocean views to boot!
+          </div>
+        </div>
+      </div>
+      <!-- slideshow -->
+      <div id="slideshow" class="slideshow">
+        <div class="slide-wrapper">
+          <div id="hoveer" class="slide">
+            <img class="slide-number" src="images/rockclimbing/rockclimb1.jpg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/mountain/mountain3.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/mountain/mountain5.jpeg" width="100%" height="100%">
+          </div>
+        </div>
+      </div>
+      <!-- slideshow -->
+      <div id="slideshow" class="slideshow2">
+        <div class="slide-wrapper">
+          <div id="hoveer" class="slide">
+            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+          </div>
+
+          <div class="slide">
+            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </section>
+  <!---------------------------------------------------------------------->
+  <!-- footer -->
+  <footer>
+    <div id="about">
+      <h4>About</h4>
+      <ul>
+        <li><a href="https://www.outdoorproject.com/">| Home</a></li>
+        <li><a href="https://www.outdoorwarehouse.co.za/">| Gallery</a></li>
+        <li><a href="http://www.outdoornetwork.co.za/">| Contact Us</a></li>
+      </ul>
+    </div>
+    <div id="related-sites">
+      <h4>Related Sites</h4>
+      <ul>
+        <li><a href="https://www.outdoorproject.com/">| Outdoor Project</a></li>
+        <li><a href="https://www.outdoorwarehouse.co.za/">| Outdoor Warehouse</a></li>
+        <li><a href="http://www.outdoornetwork.co.za/">| Outdoor Network</a></li>
+        <li><a href="https://www.capetownmagazine.com/hikes-overview">| Explore the Outdoors</a></li>
+      </ul>
+    </div>
+  </footer>
+</body>
 </html>
