--- a/outdoor_adventures_gallery.html
+++ b/outdoor_adventures_gallery.html
@@ -54,64 +54,94 @@
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
             <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Camping
+              </div>
+            </div>
           </div>
 
           <div class="slide">
             <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Camping
+              </div>
+            </div>
           </div>
 
           <div class="slide">
             <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Camping
+              </div>
+            </div>
           </div>
 
           <div class="slide">
             <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Camping
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <!-- image 1 -->
       <div class="box1">
         <div>
-          <img src="images/camp/camp1.jpeg" alt="" width="100%" height="100%">
+          <img src="images/locations/Grootvadersbos-Camping.jpg" alt="" width="100%" height="100%">
         </div>
         <div class="overlay">
-          <div class="text">number 1</div>
+          <div class="text">
+            If you love towering trees, magical mountain views and wonderful birdlife, then get yourself to Grootvadersbos, perhaps Cape Nature’s most beautiful forest reserve, in the foothills of the Langeberg Mountains. Hiking and birding are the main attractions here, along with the 60-metre-high redwoods that are just a short walk from the campsite. Neat and compact, this is a wonderful little campsite and the recently renovated ablutions are some of the best you’ll ever find at a campground.
+          </div>
         </div>
       </div>
       <!-- image 2 -->
       <div class="box2">
         <div>
-          <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+          <img src="images/locations/River-Goose-Camping.jpg" alt="" width="100%" height="100%">
         </div>
         <div class="overlay">
-          <div class="text">number 2</div>
+          <div class="text">
+            Beautiful, green lawns flow into the Breede River at Eureka Farm’s River Goose Campsite. Spend your days canoeing or tubing in the warm river water, or pop down the road to one of the many wine farms for a tasting (Van Loveren Family Wines does an excellent cheese and wine pairing). Campsite owner, Kelvin, also operates a large double-decker barge for river cruises.
+          </div>
         </div>
       </div>
       <!-- image 3 -->
       <div class="box3">
         <div>
-          <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+          <img src="images/locations/Oewerzicht.jpg" alt="" width="100%" height="100%">
         </div>
         <div class="overlay">
-          <div class="text">number 3</div>
+          <div class="text">
+            Sunset on the Langeberg is one of the most beautiful sights in South Africa, and Oewerzicht is a wonderful place to enjoy it. Apart from the stunning scenery, there’s also fishing and canoeing in the Riviersonderend River which gurgles right past the campground, plus hiking and mountain biking through the surrounding farmland.
+          </div>
         </div>
       </div>
       <!-- images 4 -->
       <div class="box4">
         <div>
-          <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+          <img src="images/locations/Badensfontein.jpg" alt="" width="100%" height="100%">
         </div>
         <div class="overlay">
-          <div class="text">number 4</div>
+          <div class="text">
+            Baden Boskamp is tucked into a small, grassy hollow, 5km north of Montagu. Out of season or midweek, you’ll probably have the whole place to yourself – a huge rolling lawn surrounded by vineyards, shady trees, and small pool to cool off in. There are two lapas with power points and communal fridge, and portable braais to wheel out to your camp.
+          </div>
         </div>
       </div>
       <!-- image 5 -->
       <div class="box5">
         <div>
-          <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+          <img src="images/locations/Dwarsberg.jpg" alt="" width="100%" height="100%">
         </div>
         <div class="overlay">
-          <div class="text">number 5</div>
+          <div class="text">
+            On the cusp of the Overberg, Dwarsberg Trout Hideaway lies snug on the banks of the Holsloot River, 15km south of Rawsonville. Each campsite is private, with its own stretch of lush green lawn and private ablutions. There’s trout in the river and hiking and mountain biking trails in the vicinity.
+          </div>
         </div>
       </div>
     </section>
@@ -122,62 +152,88 @@
       <div id="slideshow" class="slideshow">
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
-            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/fish1.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Fishing
+              </div>
+            </div>
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/fish2.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Fishing
+              </div>
+            </div>
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/fish6.jpg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+              Fishing
+              </div>
+            </div>
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/paternoster.jpg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Fishing
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
       <!-- image 1 -->
       <div class="part1">
-        <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        <img src="images/locations/romanrocks.jpg" alt="" width="100%" height="100%">
         <div class="overlay">
-          <div class="text">number 1</div>
+          <div class="text">
+            Roman Rocks is a good angling spot for a variety of saltwater fish as the area is made up of broken rock, rocky gullies and sand banks with holes where Steenbras and Kob like to hang around, as well as numerous Sandshark.
+          </div>
         </div>
       </div>
       <!-- image 2 -->
       <div class="part2">
-        <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        <img src="images/locations/riverpoint.jpg" alt="" width="100%" height="100%">
         <div class="overlay">
-          <div class="text">number 2</div>
+          <div class="text">Fish River Point
+          <br>
+          Heavy tackle and sliding tackle is what is needed for this venue. Throw baits can be successful as well but sliding is a first choice as big baits work the best here and often one needs to get out a big bait to 120 meters or so, unless there is colour in the water.</div>
         </div>
       </div>
       <!-- slide show -->
       <div id="slideshow" class="slideshow2">
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
-            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/fish3.jpeg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/fish4.jpeg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/underberg.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/hout-bay.jpg" width="100%" height="100%">
           </div>
         </div>
       </div>
       <!-- image 3 -->
       <div class="part3">
-        <img src="images/camp/camp2.jpeg" alt="" width="100%" height="100%">
+        <img src="images/locations/Brazenhead.jpg" alt="" width="100%" height="100%">
         <div class="overlay">
-          <div class="text">number 3</div>
+          <div class="text">
+            Brazenhead, in the Transkei area, is truly one of the most beautiful rural areas you could ever wish to visit for angling purposes. The natural beauty and fishing spots are endless.
+          </div>
         </div>
       </div>
 
@@ -189,19 +245,39 @@
       <div id="slideshow" class="slideshow">
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
-            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/hiking/hiking1.jpg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Hiking
+              </div>
+            </div>
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/hiking/hiking2.jpg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Hiking
+              </div>
+            </div>
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/hiking/hiking3.jpg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Hiking
+              </div>
+            </div>
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/hiking/hiking4.jpg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                Hiking
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -210,19 +286,19 @@
       <div id="slideshow" class="slideshow2">
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
-            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/hiking/hiking5.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/hiking/hiking6.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/hiking/hiking1.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/mountain/mountain2.jpg" width="100%" height="100%">
           </div>
         </div>
       </div>
@@ -281,10 +357,12 @@
       <!-- images 3 -->
       <div class="img3">
         <div>
-          <img src="images/camp/camp1.jpeg" alt="" width="100%" height="100%">
+          <img src="images/locations/Roc_n_Rope.jpg" alt="" width="100%" height="100%">
         </div>
         <div class="overlay">
-          <div class="text">number 3</div>
+          <div class="text">
+            Our team will kit you up, train you up and get you on the rocks – all from our central location in the heart of the South African rock climbing mecca. Apart from our climbing shop and rental service, you can choose from half-day climbing sessions, introductory weekend workshops and abseils right next to the mighty 70 m Elands falls.
+          </div>
         </div>
       </div>
       <!-- images 4 -->
@@ -303,14 +381,29 @@
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
             <img class="slide-number" src="images/rockclimbing/rockclimb1.jpg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                 Rock Climbing
+              </div>
+            </div>
           </div>
 
           <div class="slide">
             <img class="slide-number" src="images/mountain/mountain3.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                 Rock Climbing
+              </div>
+            </div>
           </div>
 
           <div class="slide">
             <img class="slide-number" src="images/mountain/mountain5.jpeg" width="100%" height="100%">
+            <div class="overlay">
+              <div class="text">
+                 Rock Climbing
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -318,19 +411,19 @@
       <div id="slideshow" class="slideshow2">
         <div class="slide-wrapper">
           <div id="hoveer" class="slide">
-            <img class="slide-number" src="images/camp/camp1.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp2.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp3.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/camp/camp4.jpeg" width="100%" height="100%">
+            <img class="slide-number" src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
           </div>
         </div>
       </div>
