--- a/outdoor_adventures_gallery.html
+++ b/outdoor_adventures_gallery.html
@@ -415,15 +415,15 @@
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
+            <img class="slide-number" src="images/rockclimbing/rockclimb3.jpg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
+            <img class="slide-number" src="images/rockclimbing/rockclimb4.jpeg" width="100%" height="100%">
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
+            <img class="slide-number" src="images/rockclimbing/rockclimb5.jpeg" width="100%" height="100%">
           </div>
         </div>
       </div>
