--- a/outdoor_adventures_gallery.html
+++ b/outdoor_adventures_gallery.html
@@ -179,7 +179,7 @@
           </div>
 
           <div class="slide">
-            <img class="slide-number" src="images/fish/fish2.jpg" width="100%" height="100%">
+            <img class="slide-number" src="images/fish/underberg.jpg" width="100%" height="100%">
             <div class="overlay">
               <div class="text">
                 Fishing
