--- a/outdoor_adventures_gallery.html
+++ b/outdoor_adventures_gallery.html
@@ -304,7 +304,7 @@
       </div>
       <!-- images 1 -->
       <div class="hike">
-        <img src="images/locations/Mafadi.jpg" alt="" width="100%" height="100%">
+        <img src="images/locations/mafadi2.jpg" alt="" width="100%" height="100%">
         <div class="overlay">
           <div class="text">Mafadi is the highest point in South Africa and situated in the Drakensberg Mountain range, home to some of the finest adventure trekking around - if you are looking for a feeling of BIG, wide open space, The Drakensberg will give you that - just look at the Gallery (all photo's in the gallery were taken during guided hikes, and none are professionally 'posed').</div>
         </div>
