--- a/index.html
+++ b/index.html
@@ -55,11 +55,18 @@
   <section>
 
     <div id="images">
-      <h3>Camping</h3>
-      <h3>Fishing</h3>
-      <h3>Hiking</h3>
-      <h3>Rock Climbing</h3>
-      <br>
+      <div class="homeImg">
+        <h3>Camping</h3>
+      </div>
+      <div class="homeImg">
+        <h3>Fishing</h3>
+      </div>
+      <div class="homeImg">
+        <h3>Hiking</h3>
+      </div>
+      <div class="homeImg">
+        <h3>Rock Climbing</h3>
+      </div>
       <div class="homeImg">
         <a href="#camping"><img src="images/camp/camp3.jpeg" alt="" width="100%" height="100%">
         </a>
