--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </a>
       </div>
       <div class="homeImg">
-        <a href="#fishing"><img src="images/fish/fish3.jpeg" alt="" width="100%" height="100%">
+        <a href="#fishing"><img src="images/fish/fish2.jpeg" alt="" width="100%" height="100%">
         </a>
       </div>
       <div class="homeImg">
@@ -138,7 +138,7 @@
           Fishing is an ancient practice that dates back to at least the beginning of the Upper Paleolithic period about 40,000 years ago.
         </p>
       </div>
-      <div class="fishingImg"><img src="images/fish/hout-bay.jpg" alt=""></div>
+      <div class="fishingImg"><img src="images/fish/fish4.jpg" alt=""></div>
     </div>
     <!--------------------------------------------------->
     <!-- scroll sidebar part two -->
@@ -158,10 +158,10 @@
       </div>
 
       <div class="heading"><h5>Fishing</h5></div>
-      <div class="picture"><img src="images/fish/fish1.jpeg" width="100%" height="100%"></div>
+      <div class="picture"><img src="images/fish/fish2.jpeg" width="100%" height="100%"></div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/fish/fish5.jpeg" width="100%" height="100%"></div>
+      <div class="picture"><img src="images/fish/fish4.jpeg" width="100%" height="100%"></div>
 
       <div class="heading"><h5>Dundi Lodge, Augrabies</h5></div>
       <div class="picture">
@@ -174,10 +174,10 @@
       <div class="picture"><img src="images/fish/fish6.jpg" width="100%" height="100%"></div>
 
       <div class="heading"><h5>Camping</h5></div>
-      <div class="picture"><img src="images/camp/camp4.jpeg" width="100%" height="100%"></div>
+      <div class="picture"><img src="images/camp/camp3.jpeg" width="100%" height="100%"></div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/camp/camp2.jpeg" width="100%" height="100%"></div>
+      <div class="picture"><img src="images/camp/camp1.jpeg" width="100%" height="100%"></div>
 
       <div class="heading"><h5></h5></div>
       <div class="picture"><img src="images/forest/light-forest-trees-morning.jpg" width="100%" height="100%"></div>
