--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </div>
 
       <div class="heading"><h5>Fishing</h5></div>
-      <div class="picture"><img src="images/fish/fish2.jpeg" width="100%" height="100%"></div>
+      <div class="picture"><img src="images/fish/fish2.jpg" width="100%" height="100%"></div>
 
       <div class="heading"><h5></h5></div>
       <div class="picture"><img src="images/fish/fish4.jpg" width="100%" height="100%"></div>
