added hover on gallery buttons

--- a/gallery.html
+++ b/gallery.html
@@ -44,9 +44,11 @@
       </div>
     </div>
   </nav>
+
   <!------------------------------------------------------------------------------------->
   <!-- Content -->
   <section>
+
   <!------------------------------------------------>
     <!-- Camping -->
     <h2 id="camping">Camping</h2>
@@ -55,7 +57,7 @@
       <div class="img1">
         <article class="box1 down">
 
-          <h3><button id="button" class='click' onclick='toggle1()'>Grootvadersbos</button></h3>
+          <h3 title="click here"><button id="button" class='click' onclick='toggle1()'>Grootvadersbos</button></h3>
 
           <p>If you love towering trees, magical mountain views and wonderful birdlife, then get yourself to Grootvadersbos, perhaps Cape Nature’s most beautiful forest reserve, in the foothills of the Langeberg Mountains. Hiking and birding are the main attractions here, along with the 60-metre-high redwoods that are just a short walk from the campsite.</p>
         </article>
@@ -65,7 +67,7 @@
         <div class="img2">
           <article class="box2 down">
 
-            <h3><button id="button" class='click' onclick='toggle2()'>River Goose Campsite</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle2()'>River Goose Campsite</button></h3>
 
             <p>Beautiful, green lawns flow into the Breede River at Eureka Farm’s River Goose Campsite. Spend your days canoeing or tubing in the warm river water, or pop down the road to one of the many wine farms for a tasting (Van Loveren Family Wines does an excellent cheese and wine pairing).</p>
           </article>
@@ -75,7 +77,7 @@
         <div class="img3">
           <article class="box3 down">
 
-            <h3><button id="button" class='click' onclick='toggle3()'>Oewerzicht</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle3()'>Oewerzicht</button></h3>
 
             <p>Sunset on the Langeberg is one of the most beautiful sights in South Africa, and Oewerzicht is a wonderful place to enjoy it. Apart from the stunning scenery, there’s also fishing and canoeing in the Riviersonderend River which gurgles right past the campground, plus hiking and mountain biking through the surrounding farmland.</p>
           </article>
@@ -90,7 +92,7 @@
         <div class="img4">
           <article class="box4 down">
 
-            <h3><button id="button" class='click' onclick='toggle4()'>Roman Rocks</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle4()'>Roman Rocks</button></h3>
 
             <p>Roman Rocks is a good angling spot for a variety of saltwater fish as the area is made up of broken rock, rocky gullies and sand banks with holes where Steenbras and Kob like to hang around, as well as numerous Sandshark.</p>
           </article>
@@ -99,7 +101,7 @@
         <div class="img5">
           <article class="box5 down">
 
-            <h3><button id="button" class='click' onclick='toggle5()'>Fish River Point</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle5()'>Fish River Point</button></h3>
 
             <p>Heavy tackle and sliding tackle is what is needed for this venue. Throw baits can be successful as well but sliding is a first choice as big baits work the best here and often one needs to get out a big bait to 120 meters or so, unless there is colour in the water.</p>
           </article>
@@ -108,7 +110,7 @@
         <div class="img6">
           <article class="box6 down">
 
-            <h3><button id="button" class='click' onclick='toggle6()'>Brazenhead</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle6()'>Brazenhead</button></h3>
 
             <p>Brazenhead, in the Transkei area, is truly one of the most beautiful rural areas you could ever wish to visit for angling purposes. The natural beauty and fishing spots are endless.</p>
           </article>
@@ -123,7 +125,7 @@
         <div class="img7">
           <article class="box7 down">
 
-            <h3><button id="button" class='click' onclick='toggle7()'>Mafadi</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle7()'>Mafadi</button></h3>
 
             <p>Mafadi is the highest point in South Africa and situated in the Drakensberg Mountain range, home to some of the finest adventure trekking around - if you are looking for a feeling of BIG, wide open space, The Drakensberg will give you that - just look at the Gallery (all photo's in the gallery were taken during guided hikes, and none are professionally 'posed').</p>
           </article>
@@ -132,7 +134,7 @@
         <div class="img8">
           <article class="box8 down">
 
-            <h3><button id="button" class='click' onclick='toggle8()'>Devil’s Peak</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle8()'>Devil’s Peak</button></h3>
 
             <p>This path zig-zags up from Tafelberg Road (where the Cableway station is) and then takes a steep route up to the peak. There are fantastic views of Table Mountain and the city below once you reach the top.</p>
           </article>
@@ -141,7 +143,7 @@
         <div class="img9">
           <article class="box9 down">
 
-            <h3><button id="button" class='click' onclick='toggle9()'>Chapman’s Peak</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle9()'>Chapman’s Peak</button></h3>
 
             <p>Ericas, proteas and indigenous trees can all be found in the thick fynbos covering this peak. You’ll also have the added bonus of breathtaking views of Hout Bay, Fish Hoek and Gordon’s Bay.</p>
           </article>
@@ -156,7 +158,7 @@
         <div class="img10">
           <article class="box10 down">
 
-            <h3><button id="button" class='click' onclick='toggle10()'>De Pakhuys</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle10()'>De Pakhuys</button></h3>
 
             <p>De Pakhuys offers nature lovers and adventure seekers alike the opportunity to experience the Cederberg by bouldering in Rocklands. De Pakhuys chalets and campsite are located right in the middle of the world-famous Rocklands climbing area.</p>
           </article>
@@ -165,7 +167,7 @@
         <div class="img11">
           <article class="box11 down">
 
-            <h3><button id="button" class='click' onclick='toggle11()'>Cederberg</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle11()'>Cederberg</button></h3>
 
             <p>Explore the high peaks and hidden secrets of the rugged Cederberg mountain paradise with a qualified, registered mountain guide. We offer various trekking options, ranging from moderate day hikes to multi-day overnight trips. Both classic backpacking, with camping in the wild, and lodge-based slackpacking tours are available.</p>
           </article>
@@ -174,7 +176,7 @@
         <div class="img12">
           <article class="box12 down">
 
-            <h3><button id="button" class='click' onclick='toggle12()'>Elands Falls</button></h3>
+            <h3 title="click here"><button id="button" class='click' onclick='toggle12()'>Elands Falls</button></h3>
 
             <p>Our team will kit you up, train you up and get you on the rocks – all from our central location in the heart of the South African rock climbing mecca. Apart from our climbing shop and rental service, you can choose from half-day climbing sessions, introductory weekend workshops and abseils right next to the mighty 70 m Elands falls</p>
           </article>
@@ -188,9 +190,9 @@
     <div id="about">
       <h4>About</h4>
       <ul>
-        <li><a href="https://www.outdoorproject.com/">| Home</a></li>
-        <li><a href="https://www.outdoorwarehouse.co.za/">| Gallery</a></li>
-        <li><a href="http://www.outdoornetwork.co.za/">| Contact Us</a></li>
+        <li><a href="index.html">| Home</a></li>
+        <li><a href="gallery.html">| Gallery</a></li>
+        <li><a href="contact.html">| Contact Us</a></li>
       </ul>
     </div>
     <div id="related-sites">
