--- a/contact.html
+++ b/contact.html
@@ -101,9 +101,9 @@
     <div id="about">
       <h4>About</h4>
       <ul>
-        <li><a href="https://www.outdoorproject.com/">| Home</a></li>
-        <li><a href="https://www.outdoorwarehouse.co.za/">| Gallery</a></li>
-        <li><a href="http://www.outdoornetwork.co.za/">| Contact Us</a></li>
+        <li><a href="index.html">| Home</a></li>
+        <li><a href="gallery.html">| Gallery</a></li>
+        <li><a href="contact.html">| Contact Us</a></li>
       </ul>
     </div>
     <div id="related-sites">
