--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <div class="navbar">
         <!-- dropdown categories -->
         <div class="dropdown">
-          <button class="dropbtn"><img src="images/icons/squares.png" alt="" width="20px" height="20px">
+          <button class="dropbtn">
+
+            <img src="images/icons/squares.png" alt="" width="20px" height="20px">
 
           </button>
           <div class="dropdown-content">
@@ -24,19 +26,31 @@
         </div>
 
         <!-- home -->
-        <div class="icon-box"><a href="#home"><img class="icon" src="images/icons/house.png" alt="" width="20px" height="20px"></a>
+        <div class="icon-box">
+          <a href="#home">
+            <!-- icon -->
+            <img class="icon" src="images/icons/house.png" alt="" width="20px" height="20px">
+          </a>
           <div class="link">
             <a href="#">Home</a>
           </div>
         </div>
         <!-- gallery -->
-        <div class="icon-box"><a href="gallery.html"><img class="icon" src="images/icons/gallery.png" alt="" width="20px" height="20px"></a>
+        <div class="icon-box">
+          <a href="gallery.html">
+            <!-- icon -->
+            <img class="icon" src="images/icons/gallery.png" alt="" width="20px" height="20px">
+          </a>
           <div class="link">
             <a href="gallery.html">Gallery</a>
           </div>
         </div>
         <!-- contact us -->
-        <div class="icon-box"><a href="contact.html"><img class="icon" src="images/icons/agenda.png" alt="" width="20px" height="20px"></a>
+        <div class="icon-box">
+          <a href="contact.html">
+            <!-- icon -->
+            <img class="icon" src="images/icons/agenda.png" alt="" width="20px" height="20px">
+          </a>
           <div class="link">
             <a href="contact.html">Contact Us</a>
           </div>
@@ -55,34 +69,43 @@
   <section>
 
     <div id="images">
+
+      <!-- Headings for categories -->
       <div class="homeImg">
-        <h3>Camping</h3>
+        <h3><a href="#camping">Camping</a></h3>
       </div>
       <div class="homeImg">
-        <h3>Fishing</h3>
+        <h3><a href="#fishing">Fishing</a></h3>
       </div>
       <div class="homeImg">
-        <h3>Hiking</h3>
+        <h3><a href="#hiking">Hiking</a></h3>
       </div>
       <div class="homeImg">
-        <h3>Rock Climbing</h3>
+        <h3><a href="#rock-climbing">Rock Climbing</a></h3>
       </div>
+
+      <!-- Images for categories -->
       <div class="homeImg">
-        <a href="#camping"><img src="images/camp/camp3.jpg" alt="" width="100%" height="100%">
+        <a href="#camping">
+          <img src="images/camp/camp3.jpg" alt="" width="100%" height="100%">
         </a>
       </div>
       <div class="homeImg">
-        <a href="#fishing"><img src="images/fish/fish2.jpg" alt="" width="100%" height="100%">
+        <a href="#fishing">
+          <img src="images/fish/fish2.jpg" alt="" width="100%" height="100%">
         </a>
       </div>
       <div class="homeImg">
-        <a href="#hiking"><img src="images/hiking/hiking3.jpg" alt="" width="100%" height="100%">
+        <a href="#hiking">
+          <img src="images/hiking/hiking3.jpg" alt="" width="100%" height="100%">
         </a>
       </div>
       <div class="homeImg">
-        <a href="#rock-climbing"><img src="images/rockclimbing/rockclimb3.jpg" alt="" width="100%" height="100%">
+        <a href="#rock-climbing">
+          <img src="images/rockclimbing/rockclimb3.jpg" alt="" width="100%" height="100%">
         </a>
       </div>
+
     </div>
     <!-------------------------------------------------------------->
     <!--scroll sidebar part one-->
@@ -102,43 +125,67 @@
       </div>
 
       <div class="heading"><h5>Hiking</h5></div>
-      <div class="picture"><img src="images/mountain/mountain6.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/mountain/mountain6.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/hiking/hiking2.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/hiking/hiking2.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5>Dannen</h5></div>
-      <div class="picture"><a href="https://www.outdoorproject.com/"><img src="images/sidebar/imgad.jpg" width="100%" height="100%"></a></div>
+      <div class="picture">
+        <a href="https://www.outdoorproject.com/"><img src="images/sidebar/imgad.jpg" width="100%" height="100%"></a>
+      </div>
 
       <div class="heading"><h5>Rock Climbing</h5></div>
-      <div class="picture"><img src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/rockclimbing/rockclimb2.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/rockclimbing/rockclimb4.jpeg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/rockclimbing/rockclimb4.jpeg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/rockclimbing/rockclimb5.jpeg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/rockclimbing/rockclimb5.jpeg" width="100%" height="100%">
+      </div>
 
     </div>
     <!----------------------------------------------->
     <!-- Camping -->
     <div id="camping" class="content">
       <div class="camping">
+
         <h4>Camping</h4>
         <p>Camping is an outdoor activity involving overnight stays away from home in a shelter, such as a tent. Generally participants leave developed areas to spend time outdoors in more natural ones in pursuit of activities providing them enjoyment. To be regarded as "camping" a minimum of one night is spent outdoors, distinguishing it from day-tripping, picnicking, and other similarly short-term recreational activities. Camping can be enjoyed through all four seasons.</p>
+
       </div>
-      <div class="campImg"><img src="images/camp/Drakensberg.jpg" alt="" height="300px" width="400px"></div>
+      <!-- image -->
+      <div class="campImg">
+        <img src="images/camp/Drakensberg.jpg" alt="" height="300px" width="400px">
+      </div>
+
     </div>
     <!-- Fishing -->
     <div id="fishing" class="content">
       <div class="fishing">
+
         <h4>Fishing</h4>
         <p>Fishing is the activity of trying to catch fish. Fish are normally caught in the wild. Techniques for catching fish include hand gathering, spearing, netting, angling and trapping.
           <br>
           Fishing is an ancient practice that dates back to at least the beginning of the Upper Paleolithic period about 40,000 years ago.
         </p>
+
       </div>
-      <div class="fishingImg"><img src="images/fish/fish4.jpg" alt=""></div>
+      <!-- image -->
+      <div class="fishingImg">
+        <img src="images/fish/fish4.jpg" alt="">
+      </div>
+
     </div>
     <!--------------------------------------------------->
     <!-- scroll sidebar part two -->
@@ -158,10 +205,14 @@
       </div>
 
       <div class="heading"><h5>Fishing</h5></div>
-      <div class="picture"><img src="images/fish/fish2.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/fish/fish2.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/fish/fish4.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/fish/fish4.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5>Dundi Lodge, Augrabies</h5></div>
       <div class="picture">
@@ -171,37 +222,57 @@
       </div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/fish/fish6.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/fish/fish6.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5>Camping</h5></div>
-      <div class="picture"><img src="images/camp/camp3.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/camp/camp3.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/camp/camp1.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/camp/camp1.jpg" width="100%" height="100%">
+      </div>
 
       <div class="heading"><h5></h5></div>
-      <div class="picture"><img src="images/forest/light-forest-trees-morning.jpg" width="100%" height="100%"></div>
+      <div class="picture">
+        <img src="images/forest/light-forest-trees-morning.jpg" width="100%" height="100%">
+      </div>
     </div>
     <!-------------------------------------------->
     <!-- Hiking -->
     <div id="hiking" class="content">
       <div class="hiking">
+
         <h4>Hiking</h4>
         <p>hiking means walking outdoors on a trail, or off trail, for recreational purposes. A day hike refers to a hike that can be completed in a single day.
           <br>
           Hiking is taking a long walk in the countryside, usually for pleasure or exercise</p>
+
         </div>
-        <div class="hikingImg"><img src="images/hiking/hiking5.jpg" alt="" width="300px" height="200px"></div>
+        <!-- image -->
+        <div class="hikingImg">
+          <img src="images/hiking/hiking5.jpg" alt="" width="300px" height="200px">
+        </div>
+
       </div>
       <!-- rockclimbing -->
       <div id="rock-climbing" class="content">
         <div class="rock-climbing">
+
           <h4>Rock Climbing</h4>
           <p>Rock climbing is an activity in which participants climb up, down or across natural rock formations
             <br>
             Rock climbing is a physically and mentally demanding sport, one that often tests a climber's strength, endurance, agility and balance along with mental control. It can be a dangerous activity and knowledge of proper climbing techniques and use of specialized climbing equipment is crucial for the safe completion of routes. Because of the wide range and variety of rock formations around the world, rock climbing has been separated into several different styles and sub-disciplines.</p>
+
           </div>
-          <div class="rock-climbingImg"><img src="images/rockclimbing/rockclimb6.jpg" alt="" height="300px" width="400px"></div>
+          <!-- image -->
+          <div class="rock-climbingImg">
+            <img src="images/rockclimbing/rockclimb6.jpg" alt="" height="300px" width="400px">
+          </div>
+
         </div>
 
       </section>
@@ -210,9 +281,9 @@
         <div id="about">
           <h4>About</h4>
           <ul>
-            <li><a href="https://www.outdoorproject.com/">| Home</a></li>
-            <li><a href="https://www.outdoorwarehouse.co.za/">| Gallery</a></li>
-            <li><a href="http://www.outdoornetwork.co.za/">| Contact Us</a></li>
+            <li><a href="index.html">| Home</a></li>
+            <li><a href="gallery.html">| Gallery</a></li>
+            <li><a href="contact.html">| Contact Us</a></li>
           </ul>
         </div>
         <div id="related-sites">
